alignment issue

--- a/main.css
+++ b/main.css
@@ -54,7 +54,7 @@ canvas{
         background-image: url();
         /*background-position: center;*/
         /*background-repeat: none;*/
-        width: 355px;
+        width: 350px;
         height: 350px;
     }
     canvas{
